[package]
name = "rhyve"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hypervisor", "virtualization"]
categories = ["virtualization"]
repository = "https://github.com/hermit-os/rhyve"
description = "A resource-aware Hyervisor"

[workspace]
members = [
    "crates/rhyve-x86",
    "crates/rhyve-core"
]

[dependencies]
rhyve-x86 = { path = "crates/rhyve-x86" }
rhyve-core = { path = "crates/rhyve-core" }
log = { version = "0.4", default-features = false }
x86_64 = "0.15"
hermit-entry = { version = "0.10.3", features = ["loader"] }
hermit-sync = "0.1"
time = { version = "0.3", default-features = false }
vm-fdt = { version = "0.3", default-features = false, features = ["alloc"] }
hermit = { git = "https://github.com/hermit-os/hermit-rs.git", branch = "main", default-features = false }

[features]
default = ["pci", "pci-ids", "fsgsbase", "kernel-stack", "acpi", "dns", "dhcpv4", "tcp", "udp", "virtio-net", "virtio-fs", "virtio-vsock"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
udp = ["hermit/udp"]
dns = ["hermit/dns"]
dhcpv4 = ["hermit/dhcpv4"]
virtio-net = ["hermit/virtio-net"]
virtio-fs = ["hermit/virtio-fs"]
virtio-vsock = ["hermit/virtio-vsock"]
kernel-stack = ["hermit/kernel-stack"]
