[package]
name = "rhyve"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hypervisor", "virtualization"]
categories = ["virtualization"]
repository = "https://github.com/hermit-os/rhyve"
description = "A resource-aware Hyervisor"

[workspace]
members = [
    "crates/rhyve-x86",
    "crates/rhyve-core"
]

[dependencies]
rhyve-x86 = { path = "crates/rhyve-x86" }
rhyve-core = { path = "crates/rhyve-core" }
log = "0.4"
simple_logger = "5.2"
x86_64 = "0.15"
hermit-entry = { version = "0.10.10", features = ["loader"] }
hermit-sync = "0.1"
time = { version = "0.3", default-features = false }
vm-fdt = { version = "0.3", default-features = false, features = ["alloc"] }
hermit = { git = "https://github.com/hermit-os/hermit-rs.git", branch = "main", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "query"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "sync", "fs", "io-util"] }
tokio-stream = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"] }
uhyve-interface = "0.3.0"

[features]
default = ["pci", "pci-ids", "fsgsbase", "kernel-stack", "acpi", "dns", "dhcpv4", "tcp", "udp", "virtio-net", "virtio-fs", "virtio-vsock"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
tcp = ["hermit/tcp"]
udp = ["hermit/udp"]
dns = ["hermit/dns"]
dhcpv4 = ["hermit/dhcpv4"]
virtio-net = ["hermit/virtio-net"]
virtio-fs = ["hermit/virtio-fs"]
virtio-vsock = ["hermit/virtio-vsock"]
kernel-stack = ["hermit/kernel-stack"]

# tokio/socket2 do not support the hermit target upstream; use the hermit-os
# forks (as the hermit-rs axum example does) so async networking builds.
[patch.crates-io]
socket2 = { git = "https://github.com/hermit-os/socket2.git", branch = "v0.5.x" }
tokio = { git = "https://github.com/hermit-os/tokio.git", branch = "v/tokio-1.45.0" }
