[package]
name = "rhyve-core"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["hypervisor", "virtualization"]
categories = ["no-std", "virtualization"]
repository = "https://github.com/hermit-os/rhyve"
description = "Hardware-virtualization backend (Intel VT-x) for the rhyve hypervisor"

[dependencies]
thiserror-no-std = "2.0.2"
hermit-sync = "0.1"
